# bobrito

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
docker/: prometheus.yml
src/bobrito/: __init__.py  main.py
src/bobrito.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bobrito/api/: __init__.py  app.py  deps.py
src/bobrito/api/routes/: bot.py  health.py  risk.py  trading.py
src/bobrito/config/: __init__.py  settings.py
src/bobrito/engine/: __init__.py  bot.py
src/bobrito/execution/: __init__.py  base.py  binance.py  paper.py
src/bobrito/market_data/: __init__.py  buffer.py  feed.py  history.py  models.py
src/bobrito/monitoring/: __init__.py  logger.py  metrics.py
src/bobrito/persistence/: __init__.py  database.py  models.py
src/bobrito/portfolio/: __init__.py  manager.py
src/bobrito/risk/: __init__.py  manager.py
src/bobrito/strategy/: __init__.py  base.py  indicators.py  trend_pullback.py
src/bobrito/ui/: __init__.py  auth.py  dependencies.py  routes.py  services.py  viewmodels.py
src/bobrito/ui/static/css/: app.css
src/bobrito/ui/static/js/: app.js
src/bobrito/ui/templates/: base.html  dashboard.html  login.html  signals.html  system.html  trades.html  trading.html
src/bobrito/ui/templates/partials/: _loading_card.html  balances_card.html  bot_status_card.html  control_buttons.html  events_table.html  metrics_card.html  position_card.html  risk_controls.html  risk_limiter_controls.html  risk_status_card.html  signal_cards.html  (+3 more)
tests/integration/: test_paper_filter_fail.py  test_pipeline.py  test_ui_routes.py
tests/unit/: test_candle_buffer.py  test_fee_filter.py  test_indicators.py  test_momentum_failure.py  test_paper_broker.py  test_risk.py  test_symbol_filters.py  test_ui_auth.py  test_ui_viewmodels.py  test_utc_reset.py
