[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bobrito"
version = "1.2"
description = "Automated Trading Bot for Binance Spot BTC/USDT"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Configuration
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "aiosqlite>=0.20.0",
    # Binance
    "binance-connector>=3.8.0",
    "websockets>=12.0",
    # Data
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # HTTP clients
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # Reliability
    "tenacity>=8.3.0",
    # Observability
    "loguru>=0.7.2",
    "prometheus-client>=0.20.0",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Utilities
    "python-multipart>=0.0.9",
    # Web UI (Jinja2 templates + session signing)
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.4.2",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "types-passlib>=1.7.7",
]

[project.scripts]
bobrito = "bobrito.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
